--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,30 +23,32 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  floor: ^0.18.0
-  excel: ^1.1.5
-  get: 4.1.4
-  shared_preferences: any
+  floor: ^1.2.0
+  excel: 2.0.0-null-safety-3
+  get: ^4.5.1
+  shared_preferences: ^2.0.9
   share: ^2.0.4
   path_provider: any
   pdf: any
-  printing: 4.1.0
-  file_picker: 2.1.7
+  printing: ^5.6.3
+  file_picker: ^4.2.7
+  intl:
 #  permission_handler: 5.1.0+2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.4
-#  xml: ^4.1.0
-#  meta: 1.3.0
-#  convert: ^2.1.0
+  xml: ^5.3.1
+  meta: ^1.7.0
+  convert: ^3.0.1
+#  build: 1.6.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  floor_generator: ^0.18.0
-  build_runner: ^1.11.1
+  floor_generator: ^1.2.0
+#  build_runner: ^2.1.2
 
 dependency_override:
-
+#
 #  xml: ^4.1.0
 #  meta: 1.3.0
 #  convert: ^2.1.0
