--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
@@ -33,7 +33,7 @@ dependencies:
   printing: ^5.6.3
   file_picker: ^4.2.7
   intl:
-#  permission_handler: 5.1.0+2
+  permission_handler: 6.1.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.4
@@ -45,9 +45,9 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   floor_generator: ^1.2.0
-#  build_runner: ^2.1.2
+  build_runner: ^2.1.5
 
-dependency_override:
+#dependency_override:
 #
 #  xml: ^4.1.0
 #  meta: 1.3.0
