--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,14 +32,11 @@ dependencies:
   pdf: any
   printing: ^5.6.3
   file_picker: ^4.2.7
-  intl:
+  intl: ^0.17.0
   permission_handler: 6.1.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.4
-  xml: ^5.3.1
-  meta: ^1.7.0
-  convert: ^3.0.1
 #  build: 1.6.3
 dev_dependencies:
   flutter_test:
