--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ dependencies:
   share: ^2.0.4
   path_provider: any
   pdf: any
-  printing: ^5.6.6
+  printing: ^5.6.3
   file_picker: ^4.2.7
   intl: ^0.17.0
   permission_handler: 6.1.0
@@ -65,7 +65,6 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
-    - assets/fonts/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -79,13 +78,7 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  fonts:
-    - family: Cairo
-      fonts:
-        - asset: assets/fonts/Cairo.ttf
-    - family: ciro
-      fonts:
-        - asset: assets/fonts/ciro.ttf
+  # fonts:
   #   - family: Schyler
   #     fonts:
   #       - asset: fonts/Schyler-Regular.ttf
