--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,9 +35,14 @@ dependencies:
   image_picker: ^0.8.4+4
   intl: ^0.17.0
   permission_handler: 6.1.0
+  encrypt: ^5.0.1
+  device_info: ^2.0.3
+  http: ^0.13.4
+  http_parser: ^4.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.4
+  flutter_launcher_icons: ^0.9.2
 #  build: 1.6.3
 dev_dependencies:
   flutter_test:
@@ -45,6 +50,13 @@ dev_dependencies:
   floor_generator: ^1.2.0
   build_runner: ^2.1.5
 
+
+flutter_icons:
+  android: "ic_launcher"
+  ios: true
+  remove_alpha_ios: true
+  image_path: "assets/logo.png"
+  #flutter pub run flutter_launcher_icons:main
 #dependency_override:
 #
 #  xml: ^4.1.0
